; ModuleID = '/home/carl/AnghaBench/mongoose/src/common/platforms/esp32/stubs/extr_led.c_led_off.c'
source_filename = "/home/carl/AnghaBench/mongoose/src/common/platforms/esp32/stubs/extr_led.c_led_off.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GPIO_OUT_W1TC_REG = common dso_local global i32 0, align 4
@GPIO_OUT1_W1TC_REG = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @led_off(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = icmp slt i32 %3, 32
  br i1 %4, label %5, label %10

5:                                                ; preds = %1
  %6 = load i32, i32* @GPIO_OUT_W1TC_REG, align 4
  %7 = load i32, i32* %2, align 4
  %8 = shl i32 1, %7
  %9 = call i32 @WRITE_PERI_REG(i32 %6, i32 %8)
  br label %16

10:                                               ; preds = %1
  %11 = load i32, i32* @GPIO_OUT1_W1TC_REG, align 4
  %12 = load i32, i32* %2, align 4
  %13 = sub nsw i32 %12, 32
  %14 = shl i32 1, %13
  %15 = call i32 @WRITE_PERI_REG(i32 %11, i32 %14)
  br label %16

16:                                               ; preds = %10, %5
  ret void
}

declare dso_local i32 @WRITE_PERI_REG(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
